Fix crowded navbar issue on mobile

--- a/styles/bootstrap-responsive.css
+++ b/styles/bootstrap-responsive.css
@@ -932,57 +932,15 @@
     -webkit-box-shadow: none;
     box-shadow: none;
   }
-}
-/* Mobile Phones */
-@media (max-width: 480px) {
-  .nav-collapse {
-    -webkit-transform: translate3d(0, 0, 0);
+  .masonFlag {
+	width: 156px;
+    height: 122px;
   }
-  .page-header h1 small {
-    display: block;
-    line-height: 20px;
-  }
-  input[type="checkbox"],
-  input[type="radio"] {
-    border: 1px solid #ccc;
-  }
-  .form-horizontal .control-label {
-    float: none;
-    width: auto;
-    padding-top: 0;
-    text-align: left;
-  }
-  .form-horizontal .controls {
-    margin-left: 0;
-  }
-  .form-horizontal .control-list {
-    padding-top: 0;
-  }
-  .form-horizontal .form-actions {
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-  .media .pull-left,
-  .media .pull-right {
-    display: block;
-    float: none;
-    margin-bottom: 10px;
-  }
-  .media-object {
-    margin-right: 0;
-    margin-left: 0;
-  }
-  .modal {
-    top: 10px;
-    right: 10px;
-    left: 10px;
-  }
-  .modal-header .close {
-    padding: 10px;
-    margin: -10px;
-  }
-  .carousel-caption {
-    position: static;
+  .masonLogo {
+    padding-left: 25px;
+    padding-top: 6px;
+    height: 82px;
+    width: 109px;
   }
 }
 /*Small Screens*/
@@ -1161,7 +1119,80 @@
 	font-size: 20px;
   }
 }
-
+/* Mobile Phones */
+@media (max-width: 480px) {
+  .nav-collapse {
+    -webkit-transform: translate3d(0, 0, 0);
+  }
+  .page-header h1 small {
+    display: block;
+    line-height: 20px;
+  }
+  input[type="checkbox"],
+  input[type="radio"] {
+    border: 1px solid #ccc;
+  }
+  .form-horizontal .control-label {
+    float: none;
+    width: auto;
+    padding-top: 0;
+    text-align: left;
+  }
+  .form-horizontal .controls {
+    margin-left: 0;
+  }
+  .form-horizontal .control-list {
+    padding-top: 0;
+  }
+  .form-horizontal .form-actions {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .media .pull-left,
+  .media .pull-right {
+    display: block;
+    float: none;
+    margin-bottom: 10px;
+  }
+  .media-object {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .modal {
+    top: 10px;
+    right: 10px;
+    left: 10px;
+  }
+  .modal-header .close {
+    padding: 10px;
+    margin: -10px;
+  }
+  .carousel-caption {
+    position: static;
+  }
+  .masonFlag {
+	width: 108px;
+    height: 90px;
+    left: 0;
+  }
+  .masonLogo {
+	padding-left: 18px;
+    padding-top: 6px;
+    height: 58px;
+    width: 74px;
+  }
+  .bookButton {
+	width: 94px;
+	padding: 8px 0px;
+	top: 14px;
+	right: 0.3%;
+  }
+  .bookText {
+	font-size: 14px;
+	margin-top: 1px;
+	line-height: 19px;
+  }
+}
 @media (min-width: 980px) {
   .nav-collapse.collapse {
     height: auto !important;
